overflow fix

--- a/website/site-static/sass/site/element/_listview.sass
+++ b/website/site-static/sass/site/element/_listview.sass
@@ -257,6 +257,7 @@
       background: #fff
       white-space: nowrap
       text-align: center
+      overflow: hidden
       .padder
         display: inline-block
         height: 100%
